--- a/config/database.yml
+++ b/config/database.yml
@@ -21,13 +21,13 @@ default: &default
 
 development:
   <<: *default
-  database: rails_products_ai_development
+  database: german_chef_development
 
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
   # When left blank, PostgreSQL will use the default role. This is
   # the same name as the operating system user running Rails.
-  #username: rails_products_ai
+  #username: german_chef
 
   # The password associated with the PostgreSQL role (username).
   #password:
@@ -55,7 +55,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: rails_products_ai_test
+  database: german_chef_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -79,6 +79,6 @@ test:
 #
 production:
   <<: *default
-  database: rails_products_ai_production
-  username: rails_products_ai
-  password: <%= ENV["RAILS_PRODUCTS_AI_DATABASE_PASSWORD"] %>
+  database: german_chef_production
+  username: german_chef
+  password: <%= ENV["german_chef_DATABASE_PASSWORD"] %>
